--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,6 +26,11 @@ jobs:
       - name: "Build with Maven"
         run: mvn verify --batch-mode --no-transfer-progress
 
+      - name: Build
+        run: |
+          # replace the following line with the real build script
+          touch some-build-artefact-newly-generated-in-the-build-process
+
       - name: "Check for uncommitted changes"
         uses: CatChen/check-git-status-action@bde80484b437cece974f79da735a5cd1dfdc9b0b
         with:
