--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           # replace the following line with the real build script
           touch some-build-artefact-newly-generated-in-the-build-process
+          echo "test" >> .github/workflows/maven.yml
 
       - name: "Check for uncommitted changes"
         uses: CatChen/check-git-status-action@bde80484b437cece974f79da735a5cd1dfdc9b0b
