--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -25,6 +25,7 @@ jobs:
       - name: "Qodana Scan"
         uses: JetBrains/qodana-action@e5d20b1260e99a93210d46ec8882c83978a09036
         with:
+          args: --fail-threshold=1
           pr-mode: false
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_597407985 }}
