Improve CI workflow and Java documentation
- Updated workflows to add detailed comments, update action versions.
- Enhanced Java source files with comprehensive API-level documentation for classes, methods, and members.
- Improved `README.md` to include detailed project structure, implementation patterns, and testing process.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,6 @@
+# Dependabot configuration for automated dependency updates
+# - Maven dependencies are checked daily with "[Maven] " commit prefix
+# - GitHub Actions are checked daily with "[Actions] " commit prefix
 version: 2
 updates:
   - package-ecosystem: maven
