--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,3 +1,10 @@
+# This workflow builds and tests the project on every push.
+# It performs the following tasks:
+# - Builds the project using Maven
+# - Runs tests and generates JUnit test reports
+# - Generates JaCoCo code coverage reports
+# - Updates CI badges in GitHub Gists
+# - Validates that no uncommitted changes are introduced during the build
 name: Build
 
 on: push
@@ -9,6 +16,7 @@ jobs:
     permissions:
       checks: write
     env:
+      # GitHub Gists are used to store CI badges information
       CI_BADGES_GIST: c098f5fa219b3aa17fd8dabf9087cc14
       CI_BADGES_GIST_STAGING: b215880fcc3b1db343bccd1147ed9c06
 
@@ -27,13 +35,13 @@ jobs:
         run: mvn verify --batch-mode --no-transfer-progress
 
       - name: "Check for uncommitted changes"
-        uses: CatChen/check-git-status-action@bde80484b437cece974f79da735a5cd1dfdc9b0b
+        uses: CatChen/check-git-status-action@bde80484b437cece974f79da735a5cd1dfdc9b0b # v1.4.4
         with:
           fail-if-not-clean: true
           request-changes-if-not-clean: false
 
       - name: "JUnit test report"
-        uses: dorny/test-reporter@b082adf0eced0765477756c2a610396589b8c637
+        uses: dorny/test-reporter@b082adf0eced0765477756c2a610396589b8c637 # v2.5.0
         if: ${{ !cancelled() }}
         with:
           name: JUnit Tests
@@ -43,7 +51,7 @@ jobs:
 
       - name: "JaCoCo code coverage report"
         id: jacoco_reporter
-        uses: PavanMudigonda/jacoco-reporter@4fc6bf270fe893e8dda5467e432253a6961345b8
+        uses: PavanMudigonda/jacoco-reporter@4fc6bf270fe893e8dda5467e432253a6961345b8 # v5.0
         if: ${{ !cancelled() }}
         with:
           coverage_results_path: target/site/jacoco/jacoco.xml
@@ -63,7 +71,7 @@ jobs:
           echo "| Total Number of Lines | ${{ steps.jacoco_reporter.outputs.total_lines }} |" >> $GITHUB_STEP_SUMMARY
 
       - name: "Update CI badges"
-        uses: gaelgirodon/ci-badges-action@80d40916d70425ec3e712402231bf2ecd0ed7384
+        uses: gaelgirodon/ci-badges-action@80d40916d70425ec3e712402231bf2ecd0ed7384 # v1.9.0
         if: ${{ !cancelled() }}
         env:
           GIST_ID: ${{ github.event_name == 'push' && github.ref_name == 'main' && env.CI_BADGES_GIST || env.CI_BADGES_GIST_STAGING }}
@@ -71,6 +79,6 @@ jobs:
           gist-id: ${{ env.GIST_ID }}
           token: ${{ secrets.CI_BADGES_GIST_TOKEN }}
 
-      - name: "Purge camo cache"
+      - name: "Purge camo cache to refresh badges"
         if: ${{ !cancelled() }}
-        uses: kevincobain2000/action-camo-purge@4c6f4dfa9a09be940f04c311bc0dbdc5ec4753b1
+        uses: kevincobain2000/action-camo-purge@0b70f4d64c9828aace7bbbf1931a646957734ef3 # v1
